src/objects/Content_Container__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>The Name of the container class</description>
        <inlineHelpText>The Name of the container class</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field displays the type of container class. Primary allows to control which containers the users have access to pick.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Style</fullName>
                </value>
                <value>
                    <fullName>Width</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Container</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Styles</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Style</value>
        </filters>
        <label>Styles</label>
    </listViews>
    <listViews>
        <fullName>Widthes</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Width</value>
        </filters>
        <label>Widthes</label>
    </listViews>
    <nameField>
        <label>Content Container Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Containers</pluralLabel>
    <recordTypes>
        <fullName>Admin_Only</fullName>
        <active>true</active>
        <label>Admin Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Style</fullName>
        <active>true</active>
        <label>Style</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>